<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2012 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<resources>
    <string name="app_name">POCS 알리미</string>
    <string name="error_config">%1$s 상수를 등록하고 앱을 재컴파일 하십시오.</string>
    <string name="already_registered">기기가 이미 서버에 등록되어 있습니다.</string>
    <string name="gcm_registered">기기가 GCM 서버에 등록되었습니다.</string>
    <string name="gcm_unregistered">기기가 GCM 서버에 등록해제 되었습니다.</string>
    <string name="gcm_message">메시지를 받았습니다!</string>
    <string name="gcm_error">From GCM: 오류 (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: 복구 할 수 없는 오류 (%1$s).</string>
    <string name="gcm_deleted">From GCM: 서버가 보류중인 메시지 %1$d 를 삭제했습니다.</string>
    <string name="server_registering"> 서버에 기기를 등록중입니다 (시도 %1$d/%2$d).</string>
    <string name="server_registered">기기가 서버에 등록되었습니다.</string>
    <string name="server_unregistered">기기가 서버에서 등록 해제되었습니다.</string>
    <string name="server_register_error">서버에 기기등록을 %1$d번 시도하였으나 등록에 실패하였습니다.</string>
    <string name="server_unregister_error">서버에서 기기의 등록을 취소 할 수 없습니다(%1$s).</string>
    <string name="category_settings">설정</string>
    <string name="category_information">정보</string>
    <string name="settings_notification">알림</string>
    <string name="settings_notification_summary">서버에서 보내는 알림을 받습니다</string>
    <string name="settings_vibrate">진동</string>
    <string name="settings_vibrate_summary">알림이 도착하면 진동이 발생합니다</string>
    <string name="settings_information">앱 정보</string>
    <string name="settings_information_summary">앱 개발자 정보</string>
    <string name="options_update">업데이트</string>
    <string name="options_settings">설정</string>
    <string name="options_exit">종료</string>
    <string name="back">이전</string>
    <string name="forward">다음</string>
    <string name="refresh">새로고침</string>
    <string name="home">홈</string>
    <string name="preferences">환경설정</string>

</resources>