<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:scrollbarStyle="outsideOverlay" >
    </WebView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="top"
        android:max="100"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/bottom_bar" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/ic_menu_back"
            android:contentDescription="@string/back" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/ic_menu_forward"
            android:contentDescription="@string/forward" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/ic_menu_refresh"
            android:contentDescription="@string/refresh" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/ic_menu_home"
            android:contentDescription="@string/home" />

        <ImageButton
            android:id="@+id/preferences"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/ic_menu_preferences"
            android:contentDescription="@string/preferences" />
    </LinearLayout>

</FrameLayout>